@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Sun Aug 14 19:53:29 CEST 2005
+ * Sat Aug 20 16:17:31 CEST 2005
  *
  *****************************************************************************/
 
@@ -254,6 +254,8 @@ namespace Mono.Cecil.Metadata {
 		public static uint CompressMetadataToken (CodedIndex cidx, MetadataToken token)
 		{
 			uint ret = 0;
+			if (token.RID == 0)
+				return ret;
 			switch (cidx) {
 			case CodedIndex.TypeDefOrRef :
 				ret = token.RID << 2;
